# cli-formatter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
formatter/: main.py
tests/: test_main.py
