[tool.poetry]
name = "formatter"
version = "0.1.0"
description = "character formatter app"
authors = ["Sheena <11192150+sheenacodes@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pre-commit = "pre_commit_hook:pre_commit_hook"
formatter = "formatter.main:main"
